# ChangeLog for dev-libs/libextractor
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libextractor/ChangeLog,v 1.2 2004/04/30 17:33:36 squinky86 Exp $

  30 Apr 2004; Jon Hood <squinky86@gentoo.org> libextractor-0.2.6.ebuild:
  stable on x86

*libextractor-0.3.0 (28 Apr 2004)

  28 Apr 2004; Jon Hood <squinky86@gentoo.org> libextractor-0.3.0.ebuild:
  version bump; closing 48171
  moved to media-libs category

  25 Apr 2004; Aron Griffis <agriffis@gentoo.org> libextractor-0.2.6.ebuild:
  Add die following econf for bug 48950

  30 Mar 2004; Daniel Ahlberg <aliz@gentoo.org> libextractor-0.2.6.ebuild:
  Adding amd64 keyword. Closing #44494.

  24 Mar 2004; Jason Wever <weeve@gentoo.org> libextractor-0.2.2.ebuild:
  Marked stable on sparc.

*libextractor-0.2.6 (20 Oct 2003)

  20 Oct 2003; Heinrich Wendel <lanius@gentoo.org> libextractor-0.2.6.ebuild:
  bump

  02 Oct 2003; Heinrich Wendel <lanius@gentoo.org> libextractor-0.2.0.ebuild:
  version bump

  09 Jul 2003; <spider@gentoo.org> libextractor-0.2.2.ebuild:
  marking as stable

*libextractor-0.2.2 (23 mar 2003)

  01 Apr 2003; Alastair Tse <liquidx@gentoo.org> libextractor-0.2.2.ebuild:
  another fix for this shoddy library. this time its missing -lvorbisfile.

  28 Mar 2003; Alastair Tse <liquidx@gentoo.org> libextractor-0.2.2.ebuild:
  elibtoolize

  23 mar 2003; <spider@gentoo.org> libextractor-0.2.2.ebuild:
  Updated version, this one actually builds on my system

*libextractor-0.2.0 (05 Feb 2003)

  05 Feb 2003; Nick Hadaway <raker@gentoo.org> libextractor-0.2.0.ebuild,
  files/digest-libextractor-0.2.0 :
  Version bump.  Some ebuild updates.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*libextractor-0.1.0 (10 Jul 2002)

  10 Jul 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is