@@ -1,9 +1,11 @@
+MD5 a4c911ab889a28c4e473ebff8cd17b18 libextractor-0.3.1.ebuild 902
 MD5 ea65dd9c05f5bc4b4a47221fe6fe045f libextractor-0.2.2.ebuild 959
 MD5 ffa9558fc4482d5e8dab8d7425ef1bb5 libextractor-0.3.0.ebuild 902
-MD5 0953736fbc7d5a48409e9f5c035b14ee ChangeLog 2263
+MD5 8e5f2cd167f961bb1a90537dea67d748 ChangeLog 2404
 MD5 8aefbc0e49db723ca1ad02d0c409cd49 metadata.xml 160
 MD5 0f6a8776df0116775e30ae71f9dec9fe libextractor-0.2.6.ebuild 867
 MD5 b90f0423c61f6eb4c163b2c40074012d files/digest-libextractor-0.2.2 71
 MD5 8a3a88524572e5328921576baf26d09e files/digest-libextractor-0.2.6 72
 MD5 1484e7440c6163a559417d0b304f3c3a files/digest-libextractor-0.3.0 72
+MD5 1a6b6ec0cf5f0cbb0d140ae0ab0c8c65 files/digest-libextractor-0.3.1 72
 MD5 32663ad54db490287bc8276e29dea25b files/libextractor-0.2.2-vorbisfile.patch 499
