@@ -1,0 +1,30 @@
+# Copyright 1999-2004 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libextractor/libextractor-0.3.1.ebuild,v 1.1 2004/05/01 17:07:50 squinky86 Exp $
+
+inherit libtool
+
+IUSE="oggvorbis static"
+DESCRIPTION="A simple library for keyword extraction"
+HOMEPAGE="http://www.ovmj.org/~samanta/libextractor"
+SRC_URI="http://www.ovmj.org/~samanta/libextractor/download/${P}.tar.bz2"
+SLOT="0"
+LICENSE="LGPL-2.1"
+KEYWORDS="~x86 ~sparc ~amd64"
+DEPEND=">=sys-devel/libtool-1.4.1
+	oggvorbis? ( >=media-libs/libvorbis-1.0_beta4 )"
+
+src_compile() {
+	elibtoolize
+
+	myconf="--with-gnu-ld"
+	use static \
+		&& myconf="${myconf} --enable-static" \
+		|| myconf="${myconf} --disable-static"
+	econf ${myconf} || die "econf failed"
+	make || die "compile failed"
+}
+
+src_install () {
+	make DESTDIR=${D} install || die "install failed"
+}
