@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libextractor
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libextractor/ChangeLog,v 1.2 2004/04/30 17:33:36 squinky86 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libextractor/ChangeLog,v 1.3 2004/05/01 17:07:50 squinky86 Exp $
+
+*libextractor-0.3.1 (01 May 2004)
+
+  01 May 2004; Jon Hood <squinky86@gentoo.org> +libextractor-0.3.1.ebuild:
+  version bump, closes #49458
 
   30 Apr 2004; Jon Hood <squinky86@gentoo.org> libextractor-0.2.6.ebuild:
   stable on x86
